--- a/examples/demo.html
+++ b/examples/demo.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div class="map" id="map"></div>
+    <button onclick="mbl.setVisible(!mbl.getVisible())">Toggle visibility</button>
     <script src="./demo.js"></script>
   </body>
 </html>
